[package]
name = "greenstone"
version = "0.1.0"
edition = "2021"
authors = ["Nathan Douglas <github@darkdell.net>"]

[dependencies]
iced= "0.4.0"
lazy_static = "1.4.0"
log = { version = "0.4.17", features= ["max_level_trace", "release_max_level_warn"] }
pretty_env_logger = "0.4.0"

[profile.release]
lto = true