[package]
name = "greenstone"
version = "0.1.0"
edition = "2021"
authors = ["Nathan Douglas <github@darkdell.net>"]


[lib]
name = "greenstone"
path = "src/lib.rs"

[[bin]]
name = "greenstone"
path = "src/main.rs"

[dependencies]
derivative = "2.2.0"
function_name = "0.3.0"
iced = "0.4.0"
lazy_static = "1.4.0"
log = { version = "0.4.17", features= ["max_level_trace", "release_max_level_warn"] }
pretty_env_logger = "0.4.0"

# Temporary
sdl2 = "0.34.0"
rand = "=0.7.3"

[profile.release]
lto = true