[package]
name = "greenstone"
version = "0.1.0"
edition = "2021"
authors = ["Nathan Douglas <github@darkdell.net>"]


[lib]
name = "greenstone"
path = "src/lib.rs"

[[bin]]
name = "greenstone"
path = "src/main.rs"

[dependencies]
clap = { version = "3.2.5", features = ["derive"] }
derivative = "2.2.0"
function_name = "0.3.0"
futures = { version = "0.3", default-features = false }
lazy_static = "1.4.0"
log = { version = "0.4.17", features= ["max_level_trace", "release_max_level_warn"] }
pretty_env_logger = "0.4"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.19", features = ["macros", "rt", "rt-multi-thread", "sync"] }
tokio-stream = "0.1.9"
uuid = { version = "1.1", features = ["serde", "v4"] }
warp = "0.3"

# Temporary
sdl2 = "0.34.0"
rand = "=0.7.3"

[profile.release]
lto = true